--- a/package.json
+++ b/package.json
@@ -22,5 +22,22 @@
   "bugs": {
     "url": "https://github.com/mastercod3r/to-do-webapp/issues"
   },
-  "homepage": "https://github.com/mastercod3r/to-do-webapp#readme"
+  "homepage": "https://github.com/mastercod3r/to-do-webapp#readme",
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "~1.13.2",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "ejs": "~2.3.3",
+    "express": "~4.13.1",
+    "express-session": "^1.12.1",
+    "mongoose": "^4.2.6",
+    "morgan": "~1.6.1",
+    "passport": "^0.3.2"
+    "serve-favicon": "~2.3.0"
+  }
 }
