--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "express-session": "^1.12.1",
     "mongoose": "^4.2.6",
     "morgan": "~1.6.1",
-    "passport": "^0.3.2", 
+    "passport": "^0.3.2",
+    "passport-local": "~1.0.0",
     "serve-favicon": "~2.3.0"
   }
 }
