--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
   "repository": {
     "type": "git",
@@ -23,9 +23,6 @@
     "url": "https://github.com/mastercod3r/to-do-webapp/issues"
   },
   "homepage": "https://github.com/mastercod3r/to-do-webapp#readme",
-  "scripts": {
-    "start": "node ./bin/www"
-  },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "~1.13.2",
@@ -37,6 +34,7 @@
     "express-session": "^1.12.1",
     "mongoose": "^4.2.6",
     "morgan": "~1.6.1",
+    "nodemailer": "^2.6.4",
     "passport": "^0.3.2",
     "passport-local": "~1.0.0",
     "serve-favicon": "~2.3.0"
