--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-session": "^1.12.1",
     "mongoose": "^4.2.6",
     "morgan": "~1.6.1",
+    "node-schedule": "^1.2.0",
     "nodemailer": "^2.6.4",
     "passport": "^0.3.2",
     "passport-local": "~1.0.0",
